# src/infra/http/groups/validator.py
@@ -1,0 +1,16 @@
+insert_group_validator = {
+    'name': {
+        'type': 'string',
+        'required': True
+    },
+}
+
+assign_to_rules_validator = {
+    'roles_ids': {
+        'type': 'list',
+        'schema': {
+            'type': 'number'
+        },
+        'required': True
+    },
+}
