# swagger.yaml
@@ -55,40 +55,130 @@ paths:
         400:
           description: "Algum parametro incorreto foi enviado, ou a senha antiga esta incorreta"
 
-  /users/{user_id}/roles/assign:
+  /users/{user_id}/groups/assign:
     post:
       tags:
         - "Usuarios"
-      summary: "Atribuir permissão ao usuario"
+      summary: "Atribuir um grupo ao usuario"
       requestBody:
         content:
           application/json:
             schema:
               allOf:
-                - $ref: "#/components/schemas/user-assign"
+                - $ref: "#/components/schemas/user-assign-groups"
       responses:
         204:
-          description: "A permissão foi atribuida ao usuario com sucesso"
+          description: "O Grupo foi atribuido ao usuario com sucesso"
         400:
           description: "Algum parametro incorreto foi enviado no payload"
 
-  /users/{user_id}/roles/unassign:
+  /users/{user_id}/groups/unassign:
     post:
       tags:
         - "Usuarios"
-      summary: "Remover permissão ao usuario"
+      summary: "Remover um grupo do usuario"
       requestBody:
         content:
           application/json:
             schema:
               allOf:
-                - $ref: "#/components/schemas/user-assign"
+                - $ref: "#/components/schemas/user-assign-groups"
       responses:
         204:
-          description: "A permissão foi removida com sucesso"
+          description: "O Grupo foi removido com sucesso do usuario"
         400:
           description: "Algum parametro incorreto foi enviado no payload"
   
+
+  /groups:
+    get:
+      tags:
+        - "Grupos de usuarios"
+      summary: "Listar os grupos cadastrados"
+      responses:
+        200:
+          description: "Listagem realizada com sucesso"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/groups"
+    post:
+      tags:
+        - "Grupos de usuarios"
+      summary: "Criar um novo grupo de usuarios"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - "name"
+              properties:
+                name:
+                  type: string
+                  example: "grupo de exemplo"
+                  description: "Nome do grupo que sera criado"
+      responses:
+        201:
+          description: "Grupo criado com sucesso"
+          content:
+            application/json:
+              schema:
+                type: "object"
+                properties:
+                  id:
+                    type: "number"
+                    description: "id do grupo criado"
+                    example: 1
+        409:
+          description: "Já existe um grupo cadastrado com o nome enviado"
+        400:
+          description: "foi enviado algum parametro incorreto no payload"
+  /groups/{group_id}:
+    delete:
+      tags:
+        - "Grupos de usuarios"
+      summary: "Deletar um grupo"
+      responses:
+        204:
+          description: "Grupo excluido com sucesso"
+        404:
+          description: "Não existe grupo cadastrado com o id enviado"
+  /groups/{group_id}/roles/assign:
+    post:
+      tags:
+        - "Grupos de usuarios"
+      summary: "Atribuir uma permissão ao grupo"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/groups-assign-roles"
+      responses:
+        204:
+          description: "A Permissão foi atribuida ao grupo com sucesso"
+        400:
+          description: "Algum parametro incorreto foi enviado no payload"
+  /groups/{group_id}/roles/unassign:
+    post:
+      tags:
+        - "Grupos de usuarios"
+      summary: "Remover uma permissão do grupo"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/groups-assign-roles"
+      responses:
+        204:
+          description: "A Permissão foi remida do grupo com secesso"
+        400:
+          description: "Algum parametro incorreto foi enviado no payload"
+
 
   /roles:
     get:
@@ -130,7 +220,7 @@ paths:
                 properties:
                   id:
                     type: "number"
-                    description: "id do usario criado"
+                    description: "id da permissão criada"
                     example: 1
         409:
           description: "Já existe uma permissão cadastrada com o nome enviado"
@@ -180,17 +270,17 @@ components:
           type: string
           example: "#123!abc"
           description: "nova senha"
-    user-assign:
+    user-assign-groups:
       type: object
       required:
-        - "roles_ids"
+        - "groups_ids"
       properties:
-        roles_ids:
+        groups_ids:
           type: array
           items:
             type: number
             example: 1
-            description: "ids das permissões que serão atribuidas ao usuario"
+            description: "ids dos grupos que serão atribuidos ao usuario"
 
     #Permissões
     roles:
@@ -204,3 +294,28 @@ components:
           type: string
           example: 1
           description: "nome da permissão"
+
+    
+    #Grupos
+    groups:
+      type: "object"
+      properties:
+        id:
+          type: number
+          example: 1
+          description: "id da do grupo"
+        name:
+          type: string
+          example: 1
+          description: "nome do grupo"
+    groups-assign-roles:
+      type: object
+      required:
+        - "roles_ids"
+      properties:
+        roles_ids:
+          type: array
+          items:
+            type: number
+            example: 1
+            description: "ids das permissões que serão atribuidas ao grupo"
